# wd-swelling

./: .gitignore  pkglist.txt  pyproject.toml  todo.txt
data_2021/: swelling.csv
data_2021/dakota/: LHS_distributions.out  dakota_dart_uq.in  dakota_dart_uq.out  plot.py
data_2021/function/: README.txt  explore.py  plot.py
data_2022/: 3d.py  akeru.ipynb  bei.tsv  bei_data.ipynb  ben_optimize.ipynb  colPlot.py  eureka.csv  eureka.ipynb  eureka.out  eureka.py  frate.ipynb  fuel_swelling_5-grains_no-fitting.csv  interaction.ipynb  network.gv  neuralnet.ipynb  new_data.ipynb  nominal_set.csv  plot.py  temp.ipynb  two_factors.ipynb
data_2025/: features.ipynb  inliers_hi_FR_hi_GS_160C.csv  inliers_hi_FR_hi_GS_200C.csv  inliers_hi_FR_lo_GS_200C.csv  inliers_lo_FR_hi_GS_100C.csv  inliers_lo_FR_lo_GS_100C.csv  inliers_lo_FR_lo_GS_160C.csv  mcmc_sampling.ipynb  surrogates.ipynb
data_2025/2025-01-16/: clean_high_FR_low_GR.csv  iuq.ipynb  surrogates.ipynb  (+1 more)
inv_uq/: Fd_2.ipynb  Fd_4.ipynb  Fd_6.ipynb  Lasso_coupled.ipynb  Linear_combined.ipynb  Linear_fd2.ipynb  Linear_fd4.ipynb  Linear_fd6.ipynb  NewDataVis.ipynb  bias_fd.ipynb  clean_data.csv  cleanup.ipynb  convert.ipynb  copulas_quickstart.py  data.csv  data_exploration.ipynb  dim_reduc.ipynb  fuel_swelling_20240109.txt  fuel_swelling_20240402.txt  gp_bias.pkl  iuq_with_bias.ipynb  iuq_with_multivariate.ipynb  mcmc.ipynb  param_dist.ipynb  pymc_intro.ipynb  salib_intro.ipynb  salib_linear_fd2.ipynb  salib_linear_fd6.ipynb  smpl1.npy  smpl2.npy  static_samples.ipynb  surrogates.ipynb  toy.ipynb  trial.ipynb  vamos.ipynb
(+21 files in other folders)
